--- a/.github/workflows/auto-docker-images.yml
+++ b/.github/workflows/auto-docker-images.yml
@@ -38,7 +38,7 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/ws:latest
+            ghcr.io/${{ github.repository_owner }}/rdsg:latest
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.description=Websocket Server
